@@ -7,6 +7,7 @@
   "client": [
     "MixinMinecraft",
     "accessor.ICPacketCloseWindow",
+    "accessor.ICPacketCustomPayload",
     "accessor.ICPacketPlayer",
     "accessor.ICPacketUseEntity",
     "accessor.IEntity",
